--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ node_modules
 .env.test.local
 .env.production.local
 
+
+apps/api/node_modules/
+apps/api/dist/
+apps/api/.env
+apps/api/.env.local
+
 # Testing
 coverage
 
