--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   ],
   "dependencies": {
     "@prisma/client": "^6.16.3",
-    "prisma": "^6.16.3"
+    "prisma": "^6.16.3",
+    "zod": "^4.1.11"
   }
 }
